[package]
name = "llmq"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
bincode = "=1.3.3"
flexi_logger = { version = "=0.29.0", features = ["async"] }
futures-util = { version = "=0.3.30", features = ["sink"] }
hex = "=0.4.3"
log = "=0.4.22"
md-5 = "=0.10.6"
rand = "=0.8.5"
serde = { version = "=1.0.210", features = ["derive"] }
tokio = { version = "=1.40.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = { version = "=0.1.16", features = ["net"] }
tokio-util = { version = "=0.7.12", features = ["io", "codec"] }
