[package]
name = "llmq"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "low latency multiprocess message queue"
keywords = ["broker", "messagebus", "multiprocess"]
homepage = "https://github.com/valkmit/llmq"
repository = "https://github.com/valkmit/llmq"
readme = "README.md"

[dependencies]
arc-swap = "1.7.1"
bincode = "1.3.3"
flexi_logger = { version = "0.29.4", features = ["async"] }
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
log = "0.4.22"
md-5 = "0.10.6"
memmap = "0.7.0"
rand = "0.8.5"
# default features of rkyv, explicitly enabled per documentation recommendation
# https://docs.rs/rkyv/latest/rkyv/ 
rkyv = { version = "0.8.8", features = ["std", "alloc", "bytecheck", "little_endian", "aligned", "pointer_width_32"]}
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
tokio-util = { version = "0.7.12", features = ["io", "codec"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pubsub"
harness = false

[[bench]]
name = "rkyv"
harness = false